--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <span>All event history pages</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span>https://nvn1.000webhostapp.com/api/events</span>
+                        <span class="text-wrap">https://nvn1.000webhostapp.com/api/events</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                 </div>
@@ -74,7 +74,7 @@
                         <span>Get data of specific event page</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between mb-3">
-                        <span>https://nvn1.000webhostapp.com/api/events/{{eventId}}</span>
+                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/events/{{eventId}}</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -90,10 +90,10 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>eventId</td>
-                                    <td>Yes</td>
-                                    <td>Number</td>
-                                    <td>Id of event page</td>
+                                    <td class="text-wrap text-break">eventId</td>
+                                    <td class="text-wrap text-break">Yes</td>
+                                    <td class="text-wrap text-break">Number</td>
+                                    <td class="text-wrap text-break">Id of event page</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -138,7 +138,7 @@
                         <span>Get data of specific event page(other version)</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between mb-3">
-                        <span>https://nvn1.000webhostapp.com/api/events/other_version/{{eventOtherVersionId}}</span>
+                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/events/other_version/{{eventOtherVersionId}}</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -154,10 +154,10 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>eventOtherVersionId</td>
-                                    <td>Yes</td>
-                                    <td>Number</td>
-                                    <td>Id of event other version page</td>
+                                    <td class="text-wrap text-break">eventOtherVersionId</td>
+                                    <td class="text-wrap text-break">Yes</td>
+                                    <td class="text-wrap text-break">Number</td>
+                                    <td class="text-wrap text-break">Id of event other version page</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -193,7 +193,7 @@
                         <span>Register a new account</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span>https://nvn1.000webhostapp.com/api/register</span>
+                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/register</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div class="mt-3">
@@ -212,22 +212,22 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>email</td>
-                                    <td>Yes</td>
-                                    <td>String</td>
-                                    <td></td>
+                                    <td class="text-wrap text-break">email</td>
+                                    <td class="text-wrap text-break">Yes</td>
+                                    <td class="text-wrap text-break">String</td>
+                                    <td class="text-wrap text-break"></td>
                                 </tr>
                                 <tr>
-                                    <td>username</td>
-                                    <td>Yes</td>
-                                    <td>String</td>
-                                    <td></td>
+                                    <td class="text-wrap text-break">username</td>
+                                    <td class="text-wrap text-break">Yes</td>
+                                    <td class="text-wrap text-break">String</td>
+                                    <td class="text-wrap text-break"></td>
                                 </tr>
                                 <tr>
-                                    <td>password</td>
-                                    <td>Yes</td>
-                                    <td>String</td>
-                                    <td></td>
+                                    <td class="text-wrap text-break">password</td>
+                                    <td class="text-wrap text-break">Yes</td>
+                                    <td class="text-wrap text-break">String</td>
+                                    <td class="text-wrap text-break"></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -279,7 +279,7 @@
                         <span>Login</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span>https://nvn1.000webhostapp.com/api/login</span>
+                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/login</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -295,16 +295,16 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>username</td>
-                                    <td>Yes</td>
-                                    <td>String</td>
-                                    <td></td>
+                                    <td class="text-wrap text-break">username</td>
+                                    <td class="text-wrap text-break">Yes</td>
+                                    <td class="text-wrap text-break">String</td>
+                                    <td class="text-wrap text-break"></td>
                                 </tr>
                                 <tr>
-                                    <td>password</td>
-                                    <td>Yes</td>
-                                    <td>String</td>
-                                    <td></td>
+                                    <td class="text-wrap text-break">password</td>
+                                    <td class="text-wrap text-break">Yes</td>
+                                    <td class="text-wrap text-break">String</td>
+                                    <td class="text-wrap text-break"></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -349,7 +349,7 @@
                         <span>Get the authenticated user's info</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span>https://nvn1.000webhostapp.com/api/user</span>
+                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/user</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -365,10 +365,10 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>api_token</td>
-                                    <td>Yes</td>
-                                    <td>String</td>
-                                    <td>It's the token that you get after login or register successfully</td>
+                                    <td class="text-wrap text-break">api_token</td>
+                                    <td class="text-wrap text-break">Yes</td>
+                                    <td class="text-wrap text-break">String</td>
+                                    <td class="text-wrap text-break">It's the token that you get after login or register successfully</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -412,7 +412,7 @@
                         <span>Logout</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span>https://nvn1.000webhostapp.com/api/logout</span>
+                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/logout</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div class="mt-3">
@@ -431,10 +431,10 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>api_token</td>
-                                    <td>Yes</td>
-                                    <td>String</td>
-                                    <td>It's the token that you get after login or register successfully</td>
+                                    <td class="text-wrap text-break">api_token</td>
+                                    <td class="text-wrap text-break">Yes</td>
+                                    <td class="text-wrap text-break">String</td>
+                                    <td class="text-wrap text-break">It's the token that you get after login or register successfully</td>
                                 </tr>
                             </tbody>
                         </table>
