update search event api

--- a/index.html
+++ b/index.html
@@ -36,6 +36,27 @@
                         <span class="text-wrap">https://nvn1.000webhostapp.com/api/events</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
+                    <div>
+                        <table class="table table-bordered caption-top">
+                            <caption>Path parameters</caption>
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Required</th>
+                                    <th>Value</th>
+                                    <th>Description</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="text-wrap text-break">search</td>
+                                    <td class="text-wrap text-break">No</td>
+                                    <td class="text-wrap text-break">String</td>
+                                    <td class="text-wrap text-break">Event name</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
                 <div class="col col-md-6">
                     <p class="mb-0">Example response</p>
