update search event api

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <span class="text-success me-2 fw-bold">GET</span>
                         <span>All event history pages</span>
                     </p>
-                    <div class="link-area bg-light p-2 d-flex justify-content-between">
+                    <div class="link-area bg-light p-2 d-flex justify-content-between mb-3">
                         <span class="text-wrap">https://nvn1.000webhostapp.com/api/events</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
