update login api

--- a/index.html
+++ b/index.html
@@ -454,8 +454,10 @@
                         <pre class="m-0">
 {
     "status": "Authorised",
-    "api_token": "3rdsd1l2BMHLtAFSHooKF99YfZd8UcWGp6Tad5fD7kIVHLrYxUk9WxSZm9ez"
-}                            
+    "username": "12",
+    "isAdmin": false,
+    "api_token": "YwyWydBvfNTAgFZxN64w1q7bwO26d72UM7p2YhCZPJDvOpGEQGApdVamvd32"
+}                         
                         </pre>
                     </div>
                 </div>
