update delete page api

--- a/index.html
+++ b/index.html
@@ -345,11 +345,14 @@
             <div class="row">
                 <div class="col col-md-6">
                     <p>
-                        <span class="text-success me-2 fw-bold">DELETE</span>
+                        <span class="text-success me-2 fw-bold">
+                            GET
+                            <sup title="My server doesn't support DELETE method" class="cursor-pointer text-primary">[*]</sup>
+                        </span>
                         <span>Delete event page</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/events/{id}</span>
+                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/events/{id}/delete</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
@@ -439,11 +442,14 @@
             <div class="row">
                 <div class="col col-md-6">
                     <p>
-                        <span class="text-success me-2 fw-bold">DELETE</span>
+                        <span class="text-success me-2 fw-bold">
+                            GET
+                            <sup title="My server doesn't support DELETE method" class="cursor-pointer text-primary">[*]</sup>
+                        </span>
                         <span>Delete event page(other version)</span>
                     </p>
                     <div class="link-area bg-light p-2 d-flex justify-content-between">
-                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/events/other_version/{id}</span>
+                        <span class="text-wrap text-break">https://nvn1.000webhostapp.com/api/events/other_version/{id}/delete</span>
                         <i class="bi bi-copy d-none cursor-pointer" title="copy"></i>
                     </div>
                     <div>
